# Secure-P2P-Storage-

./: README.md  coordinator.db  pyproject.toml  requirements.txt
config/: default.yaml
p2p_data/: identity.json  storage.db
scripts/: generate_keys.py  start_coordinator.py  start_node.py  test_coordinator.py  test_peer.py
src/client/: api.py  cli.py
src/coordinator/: database.py  models.py  server.py
src/p2p/: audit.py  discovery.py  encryption.py  erasure.py  node.py  storage.py  transfer.py
src/shared/: config.py  crypto.py  schemas.py
web/: app.js  index.html  styles.css
